--- a/css/index.css
+++ b/css/index.css
@@ -65,90 +65,60 @@ header{
 #back-to-top.show {
     opacity: 1;
 }
-/*
-#banner-add img{
-      width: 75%;
-    height: 25%;
-    margin-right: auto;
-    margin-left: auto;
-    float: left;}*/
+/* cart */
+#cart {
+    margin-bottom: 10px;
+}
 #cart > .btn {
     font-size: 12px;
     line-height: 18px;
-    color: #FFF;}
-    .btn-inverse:hover, .btn-inverse:active, .btn-inverse.active, .btn-inverse.disabled, .btn-inverse[disabled] {
-    background-color: #222222;
-    background-image: linear-gradient(to bottom, #333333, #111111);
-}
-.btn-group > .btn-lg {
-    font-size: 15px;
-}
-.btn-group > .btn, .btn-group > .dropdown-menu, .btn-group > .popover {
-    font-size: 12px;
+    color: #FFF !important;
 }
 .btn-inverse {
-    color: #ffffff;
+    color: #ffffff ;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     background-color: #363636;
     background-image: linear-gradient(to bottom, #444444, #222222);
     background-repeat: repeat-x;
     border-color: #222222 #222222 #000000;
 }
-.btn-lg {
-    padding: 10px 16px;
-    font-size: 15px;
+#cart.open > .btn {
+    background-image: none;
+    background-color: #FFFFFF !important;
+    border: 1px solid #E6E6E6;
+    color: #666 !important;
+    box-shadow: none;
+    text-shadow: none;
 }
-.btn {
-    padding: 7.5px 12px;
-    font-size: 12px;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+#cart.open > .btn:hover {
+    color: #444;
 }
-.btn-default {
-    color: #777;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    background-color: #e7e7e7;
-    background-image: linear-gradient(to bottom, #eeeeee, #dddddd) !important;
-    background-repeat: repeat-x;
-    border-color: #dddddd #dddddd #b3b3b3 #b7b7b7;
+#cart .dropdown-menu {
+    background: #eee;
+    z-index: 1001;
 }
-.btn-lg {
-    padding: 10px 16px;
-    font-size: 15px;
+#cart .dropdown-menu {
+    min-width: 100%;
 }
-.btn {
-    padding: 7.5px 12px;
-    font-size: 12px;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+@media (max-width: 478px) {
+    #cart .dropdown-menu {
+        width: 100%;
+    }
 }
-#cart{
-	height: 16px;
+#cart .dropdown-menu table {
+    margin-bottom: 10px;
 }
-@media only screen and (min-width: 991px) {
-  /#logo{
-    margin-left: 27px;
-   }
-   #cart{
-    font-size: 14px;
-    background-color: red !important;
-   }
-   body{
-    background-color: red;
-   }
+#cart .dropdown-menu li > div {
+    min-width: 427px;
+    padding: 0 10px;
 }
-   @media screen and (min-width: 768px) and (max-width: 900px) {
-#banner-add{
-   /* display: none;*/
-
+@media (max-width: 478px) {
+    #cart .dropdown-menu li > div {
+        min-width: 100%;
+    }
 }
-
-}
-   @media screen and (min-width: 901px) and (max-width: 1200px) {
-
-
+#cart .dropdown-menu li p {
+    margin: 20px 0;
 }
 /* slider CSS*/ 
 
