--- a/css/navbar.css
+++ b/css/navbar.css
@@ -58,3 +58,35 @@
 
 
 }
+
+/* location navigation*/
+.breadcrumb{
+        margin: 70px 0 20px 0;
+    padding: 8px 0;
+    border: 1px solid #ddd;
+}
+.breadcrumb  li{
+        text-shadow: 0 1px 0 #FFF;
+    padding: 0 20px;
+    position: relative;
+    white-space: nowrap;
+}
+.breadcrumb > li + li:before {
+    content: '';
+    padding: 0;
+}
+.breadcrumb > li:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -3px;
+    right: -5px;
+    width: 26px;
+    height: 26px;
+    border-right: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
