--- a/css/login.css
+++ b/css/login.css
@@ -56,7 +56,8 @@ body{
 }
 #content{
       margin: 30px auto auto auto;
-      border: 1px solid #222;
+     border: 1px solid #222;
+      border-radius: 3px;
 }
 
 /*custom off set*/
@@ -127,6 +128,9 @@ body{
     @media  screen and (max-width : 991px) {
                #login-div{ padding-bottom: 29px;
 
+}
+#reg-div .btn{
+      width: 86%;
 }
     }
 
