--- a/css/navbar.css
+++ b/css/navbar.css
@@ -75,6 +75,11 @@
     content: '';
     padding: 0;
 }
+.breadcrumb>li+li:before {
+    padding: 0 5px;
+    color: #ccc;
+     content: "" !important; 
+}
 .breadcrumb > li:after {
     content: '';
     display: block;
