only god know what happened

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
     margin-right: auto;
     margin-left: auto;
 }
-body{
+#home{
 	font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     color: #666;
