--- a/css/footer.css
+++ b/css/footer.css
@@ -4,25 +4,31 @@ footer {
     background-color: #303030;
     border-top: 1px solid #ddd;
     color: #e2e2e2;
+     text-align: center;
 }
 .logo{
-	width: auto;
+    width: auto;
     height: 28px;
     
 
 }
  footer p{
-	margin: 0 0 10px auto;
+    margin: 0 0 10px auto;
     /* float: left; */
     /* display: block; */
-    text-align: left;
+    
+}
+#mrrobot-logo{
+    position: relative;
+    top:-5px;
+
 }
 footer a{
-	text-decoration: none;
-	color:#ccc;
-	font-size: 18px;
+    text-decoration: none;
+    color:#ccc;
+    font-size: 18px;
 }
 footer a:hover{
-	text-decoration: none;
-	color:#fff;
+    text-decoration: none;
+    color:#fff;
 }
