--- a/css/index.css
+++ b/css/index.css
@@ -395,3 +395,90 @@ h2.price {
     background-color: #df5c39;
 }
 /*view item end here*/
+/*category button */
+
+#cat {
+    width: auto;
+    position: relative;
+    left: 0;
+    top: 0;
+}
+
+#cat .dropdown-menu{
+ 
+    top: 28px;
+    left:inherit;
+}
+
+
+#cat a,#store a{
+  
+  color: black;
+    padding: 7px 16px;
+    text-decoration: none;
+}
+#cat a:hover , #store a:hover {
+  background-color: #f1f1f1;
+
+}
+
+
+#store{
+   width: auto;
+    position: relative;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    left: 0;
+    top: -2px;
+
+}
+#shopbtn{
+    width: 140px;
+}
+/*/*/
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:before {
+    display: block;
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: 0px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
