--- a/css/viewitems.css
+++ b/css/viewitems.css
@@ -33,6 +33,8 @@ header{
 	padding-left: 20px;
 	width:100%;
 }
+.list-group-item:hover{ cursor: pointer !important; }
+
 /*#price-1{
     border:0;
     color:#b9cd6d;
@@ -108,6 +110,7 @@ header{
     border: 1px solid #ddd;
     padding-left: 6px !important;
     padding-right: 6px !important;
+    overflow: hidden;
 }
 #search input,button{
 	height: 30px;
@@ -234,4 +237,11 @@ header{
 }
 #compare-total{
         margin-left: -15px;
+}
+#cancel-btn{
+    width: 100% !important;
+    color: #f71d1d;
+}
+#loading{
+    display: none;
 }
